# anthology

./: ChangeLog.md  README.md  __init__.py  pyproject.toml
app/: __init__.py  app.py
database/: config.py  datatable.py
journals/: book.py  medium.py  session.py  utils.py
test/: test_book.py  test_session.py  uut.yaml  uut_book.yaml  uut_session.yaml
tui/css/: common.tcss
tui/screens/: entry_author.py  entry_book.py
tui/widgets/: common.py  entry.py
utility/: info.py
